--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,17 @@ dist.jar=${dist.dir}/Locadoraapp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Users\\Josinaldo\\Downloads\\mysql-connector-java-5.1.18\\mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Users\\Josinaldo\\Downloads\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Users\\Josinaldo\\Downloads\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -45,7 +50,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
